--- a/style.css
+++ b/style.css
@@ -47,3 +47,10 @@ body {
   padding: 2px 4px;
   margin-bottom: 2px;
 }
+
+.table thead th {
+  background-color: #0d6efd;
+  color: #fff;
+  font-weight: 600;
+  border-color: #0d6efd;
+}
