--- a/style.css
+++ b/style.css
@@ -52,6 +52,12 @@
       vertical-align: middle;
     }
 
+    .header-section .subtitle {
+      font-size: 1.2rem;
+      opacity: 0.95;
+      text-align: center;
+    }
+
     /* Botón PDF */
     .pdf-download-btn {
       display: inline-block;
